--- a/src/components/task-view/header/HeaderTask.css
+++ b/src/components/task-view/header/HeaderTask.css
@@ -7,9 +7,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 80%;
     height: 100px;
-    border-bottom: 1px solid var(--white);
+    margin: 0 auto;
+    border: 1px solid var(--white);
+    border-top: none;
+    border-radius: 0 0 100px 100px;
 }
 
 @media (min-width: 1024px) {
@@ -20,6 +23,8 @@ body {
         height: 100%;
         border: none;
         align-self: end;
+        margin: 0;
+        border-radius: 0 0 0 0;
         border-bottom-left-radius: 150px;
     }
 }
