--- a/src/components/task-view/header/header-info/HeaderInfo.css
+++ b/src/components/task-view/header/header-info/HeaderInfo.css
@@ -3,16 +3,18 @@
     flex-direction: row;
     width: 100%;
     height: 100px;
+    background-color: var(--product-color);
 }
 
 @media (min-width:1024px) {
     .header-task-container {
-        height: 100px;
+        height: 110px;
+        background-color: transparent;
     }
 }
 
 @media (min-width: 1440px) {
     .header-task-container {
-        height: 110px
+        height: 120px
     }
 }
