--- a/src/components/task-view/header/header-info/HeaderInfo.css
+++ b/src/components/task-view/header/header-info/HeaderInfo.css
@@ -9,7 +9,7 @@
 @media (min-width:1024px) {
     .header-task-container {
         height: 110px;
-        background-color: transparent;
+        background-color: var(--white);
     }
 }
 
