--- a/src/components/task-view/main/main-task/MainTask.css
+++ b/src/components/task-view/main/main-task/MainTask.css
@@ -1,13 +1,31 @@
 .main-task {
+    background-color: var(--white);
     display: grid;
     grid-template-columns: 1fr;
     width: 100%;
     height: 100%;
     padding: 10px 20px;
+    overflow: auto;
 }
+
+
+@media (min-width: 768px) {
+    .main-task {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
 
 @media (min-width: 1024px) {
     .main-task {
         width: calc(100% - 300px);
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 1440px) {
+    .main-task {
+        width: calc(100% - 300px);
+        grid-template-columns: repeat(3, 1fr);
     }
 }
