--- a/src/components/task-view/main/main-task/MainTask.css
+++ b/src/components/task-view/main/main-task/MainTask.css
@@ -1,5 +1,6 @@
 .main-task {
     background-color: var(--white);
+    position: relative;
     display: grid;
     grid-template-columns: 1fr;
     width: 100%;
