--- a/src/components/task-view/header/logo-title/LogoTitle.css
+++ b/src/components/task-view/header/logo-title/LogoTitle.css
@@ -8,6 +8,7 @@
         display: block;
         width: 20%;
         margin: 0 auto;
+        padding: 5px 0;
         text-align: center;
         font-size: 5rem;
         line-height: 5.2rem;
