--- a/src/components/task-view/main/button-side/ButtonSide.css
+++ b/src/components/task-view/main/button-side/ButtonSide.css
@@ -1,12 +1,18 @@
 .button-side {
+    background-color: var(--product-color);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 18%;
-    height: 80%;
-    margin: auto auto;
+    justify-self: center;
+    align-self: center;
+    width: 94px;
+    height: 60%;
+    margin: 0 20px;
+    padding: 5px;
+    border: none;
     border-radius: 15px;
+    outline: 0;
 }
 
 .button-side:hover {
@@ -16,8 +22,8 @@
 
 .button-side-icon {
     align-self: center;
-    width: 64px;
-    height: 64px;
+    width: 54px;
+    height: 54px;
 }
 
 .button-side-title {
@@ -55,9 +61,10 @@
     .button-side {
         display: grid;
         grid-template-columns: 2fr 3fr;
-        width: 75%;
+        width: 80%;
         height: 100px;
-        margin: 40px auto;
+        margin: 25px auto;
+        padding:0;
         /* border: 1px solid var(--white); */
     }
 
