modal add button done ui and style

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,7 +4,7 @@
     --product-color:#0064B7;
     --shadow: rgba(0,100,183,0.05);
     --background:#E5E5E5;
-    ---button: #0091EA;
+    --button: #0091EA;
     --white: #fefefe;
     --black:#1b1b1b;
     --task-color: #e9e9e9;
