--- a/src/components/log-in-up/main/Main.css
+++ b/src/components/log-in-up/main/Main.css
@@ -43,7 +43,7 @@
 }
 
 .button-login {
-    background-color: var(---button);
+    background-color: var(--button);
     width: 100%;
     height: 60px;
     margin-top: 8px;
