--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,6 +8,7 @@
     --white: #fefefe;
     --black:#1b1b1b;
     --task-color: #e9e9e9;
+    --task-color-selected: rgba(0,145,234,0.7);
     --input-placeholder-color:#949494;
     --input-label:#111;
     --green-state: #00C851;
