--- a/src/components/task-view/main/table-subject/TableSubject.css
+++ b/src/components/task-view/main/table-subject/TableSubject.css
@@ -2,6 +2,12 @@
     display: flex;
     flex-direction: column;
     margin-top: 40px;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+    .table {
+        width: 80%;
+    }
 }
